filtering the list of user results
